--- a/landing page/project.html
+++ b/landing page/project.html
@@ -8,7 +8,7 @@
 <div class="header">
    <div class = "container">	
 		 <div class="navbar">
-   	     <img src="C:\Users\Shivam\OneDrive\Pictures\shoes\sports-logo-png-transparent.png" width="125px"> 
+   	     <img src="image/sports-logo-png-transparent.png" width="125px"> 
    	<nav>
    		<ul>
    			<li><a href=""><u>Home</u></a></li>
@@ -27,7 +27,7 @@
    		<a href=""class="btn">Explore now &#8594;</a>
    	              </div>
    	          <div class="col-2">
-   		     <img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\Custom-Printed-T-Shirt-Round-Neck.jpg">
+   		     <img src="image/Custom-Printed-T-Shirt-Round-Neck.jpg">
        	       </div>
       </div>
   </div>
@@ -38,27 +38,27 @@
     		<h2 class="shiv">Best T-Shirt</h2>
     		<div class="row">
     		 <div class="col-3">
-    			<a href=""><img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\p1772203.jpg"></a>
+    			<a href=""><img src="image\p1772203.jpg"></a>
     			 <h4>BLUE</h4>
     			 <p>RS 800</p>
     		 </div>
     			<div class="col-3">
-    			<a href="">	<img src="file:///C:/Users/Shivam/OneDrive/Desktop/New%20folder%20(2)/New-Mockups---no-hanger---TShirt-Yellow.webp"></a>
+    			<a href="">	<img src="image/New-Mockups---no-hanger---TShirt-Yellow.webp"></a>
     				<h4>YELLOW</h4>
     				<p>Rs 1000</p>
     			</div>
     			<div class="col-3">
-    				<a href=""><img src="file:///C:/Users/Shivam/OneDrive/Desktop/New%20folder%20(2)/johan-och-nystrom-merch_tee-bc-packshot_900x.webp"></a>
+    				<a href=""><img src="image/johan-och-nystrom-merch_tee-bc-packshot_900x.webp"></a>
                       <h4> WHITE</h4>
                       <p>Rs 500</p>
     			</div>
           <div class="col-3">
-           <a href=""> <img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\custom-tennis-apparel.jpg"></a>
+           <a href=""> <img src="image\custom-tennis-apparel.jpg"></a>
                       <h4> dark red</h4>
                       <p>Rs 500</p>
           </div>
                     <div class="col-3">
-           <a href=""> <img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\images (3).jpg"></a>
+           <a href=""> <img src="image\images (3).jpg"></a>
                       <h4>BLACK</h4>
                       <p>Rs 500</p>
           </div>
@@ -71,22 +71,22 @@
  	<h2 class="title"> Best Shoes Products </h2>
  	<div class="row">
            <div class="col-4">
-           	<a href=""><img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\download (1).jpg">
+           	<a href=""><img src="image\download (1).jpg">
              <h4> White Sports shoes</h4></a>
            	 <p>Rs 900</p>
            </div>
             <div class="col-4">
-           	<a href=""><img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\images (1).jpg"></a>
+           	<a href=""><img src="image\images (1).jpg"></a>
            	 <h4> BLUE AIR</h4>
            	 <p>Rs 1000</p>
            </div>
              <div class="col-4">
-           <a href=""> <img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\images (2).jpg">
+           <a href=""> <img src="image\images (2).jpg">
              <h4> RED WHITE Sports </h4></a>
              <p>Rs 1500</p>
            </div>
              <div class="col-4">
-            <a href=""><img src="C:\Users\Shivam\OneDrive\Documents\html\download.jpg">
+            <a href=""><img src="image\1563349736564_0..jpg">
              <h4> BLACK Sports </h4></a>
              <p>Rs 1500</p>
            </div>
@@ -96,42 +96,42 @@
 
         <div class="row">
            <div class="col-4">
-            <a href=""><img src="file:///C:/Users/Shivam/OneDrive/Pictures/shoes/G1149_580x.webp"></a>
+            <a href=""><img src="image/G1149_580x.webp"></a>
              <h4> Black-Golden watch</h4>
              <p>Rs 900</p>
            </div>
            <div class="col-4">
-            <a href=""><img src="file:///C:/Users/Shivam/OneDrive/Pictures/shoes/army-casio-g-shock-watch-1000x1000.webp"></a>
+            <a href=""><img src="image/army-casio-g-shock-watch-1000x1000.webp"></a>
              <h4> Army watch</h4>
              <p>Rs 1000</p>
            </div>
              <div class="col-4">
-            <a href=""><img src="file:///C:/Users/Shivam/OneDrive/Pictures/shoes/1805QM04_1.webp">
+            <a href=""><img src="image/1805QM04_1.webp">
              <h4> Stylish watch</h4></a>
              <p>Rs 1500</p>
            </div>
          <div class="col-4">
-            <a href=""><img src="C:\Users\Shivam\OneDrive\Pictures\shoes\71z9MpYmBuL._UL1100_.jpg"></a>
+            <a href=""><img src="image\71z9MpYmBuL._UL1100_.jpg"></a>
              <h4> Black Sports watch </h4>
              <p>Rs 1500</p>
            </div>
           <div class="col-4">
-           <a href=""> <img src="file:///C:/Users/Shivam/OneDrive/Pictures/shoes/Moon_Grey_1_1ef3abc2-f8e6-4b84-8974-8f84afa84107-sw.webp"></a>
+           <a href=""> <img src="image/Moon_Grey_1_1ef3abc2-f8e6-4b84-8974-8f84afa84107-sw.webp"></a>
              <h4> Samsung</h4>
              <p>Rs 900</p>
            </div>
            <div class="col-4">
-            <a href=""><img src="file:///C:/Users/Shivam/OneDrive/Pictures/shoes/whatsapp-image-2022-12-13-at-03-30-14-1000x1000.webp"></a>
+            <a href=""><img src="image/whatsapp-image-2022-12-13-at-03-30-14-1000x1000.webp"></a>
              <h4> MI band</h4>
              <p>Rs 1000</p>
            </div>
              <div class="col-4">
-            <a href=""><img src="C:\Users\Shivam\OneDrive\Pictures\shoes\613Ay8pU9zL._SL1486_.jpg"></a>
+            <a href=""><img src="image\613Ay8pU9zL._SL1486_.jpg"></a>
              <h4> boat </h4>
               <p>Rs 1500</p>
            </div>
             <div class="col-4">
-            <a href=""><img src="file:///C:/Users/Shivam/OneDrive/Pictures/shoes/-original-imagn8pyfh5teyzg.webp"></a>
+            <a href=""><img src="image/-original-imagn8pyfh5teyzg.webp"></a>
              <h4> Apple</h4>
               <p>Rs 2500</p>
             </div>
@@ -142,7 +142,7 @@
       <div class="small-container">
         <div class="row">
           <div class="col-2">
-            <img src="C:\Users\Shivam\OneDrive\Desktop\New folder (2)\51NEjx48WQL._SL250_.jpg" class="offer-image">
+            <img src="image\51NEjx48WQL._SL250_.jpg" class="offer-image">
           </div>
           <div class="col-2">
             <p>Exclusively avaliable on SPORTS</p>
@@ -165,7 +165,7 @@
             <p>Download this App for Androids and ios smart phones .</p>
           </div>
            <div class="footer-col-2">
-            <img src="C:\Users\Shivam\OneDrive\Documents\html\SPO.png">
+            <img src="image\sky-sports-logo-0-1.png">
             <p>Our purpose is to provide the best products of the SPORTS  .</p>
           </div>
           <div class="footer-col-3">
